<resources>
    <string name="app_name">SafeGuard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name= "nav_header_name">SafeGuard</string>
    <string name="action_settings">Settings</string>


    <!--Strings fuer Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_emergency">Notruf</string>
    <string name="menu_demo">Demo</string>
    <string name="menu_firstaid">Erste-Hilfe-Maßnahmen</string>
    <string name="menu_contact">Notfallkontakt</string>
    <string name="menu_masterdata">Stammdaten</string>

    <!-- Strings für Notruf-->
    <string name="emergency_accident">Vorfall</string>
    <string name="emergency_trafficAccident">Verkehrsunfall</string>
    <string name="emergency_OtherAccident">Andere</string>
    <string name="emergency_accidentType">Art des verkehrsunfalls</string>
    <string name="emergency_car">Auto</string>
    <string name="emergency_bike">Motorrad / Fahrrad</string>
    <string name="emergency_pedestrian">Fußgänger</string>
    <string name="emergency_amountHurt">Anzahl Verletzte</string>
    <string name="emergency_One">1</string>
    <string name="emergency_Two">2</string>
    <string name="emergency_3to5">3 - 5</string>
    <string name="emergency_6to10">6 - 10</string>
    <string name="emergency_moreThanTen">> 10</string>
    <string name="emergency_group">Personengruppe</string>
    <string name="emergency_adults">nur Erwachsene</string>
    <string name="emergency_babys">inklusive Kleinkind(er)</string>
    <string name="emergency_children">inklusive Kind(er) > 6</string>
    <string name="emergency_description">beschreibung des Unfalls</string>
    <string name="emergency_squeezed">Eingeklemmt</string>
    <string name="emergency_fire">Feuer</string>
    <string name="emergency_unconscious">Bewusstlos</string>
    <string name="emergency_fleshWound">Fleischwunde</string>
    <string name="emergency_brokenBone">Knochenbruch</string>
    <string name="emergency_strongBleeding">Starke Blutung</string>
    <string name="emergency_specialInformation">"*Nach Wahl genauere Beschreibung des Unfalls*"</string>
    <string name="emergency_emergencyCall">Notruf absetzen</string>
    <string name="emergency_back">Zurück</string>





    <!--Strings fuer Stammdaten-->
    <string name="vornameStammdaten">Vorname</string>
    <string name="nachnameStammdaten">Nachname</string>
    <string name="telefonnummerStammdaten">Telefonnummer</string>
    <string name="geburtsdatumStammdaten">Geburtsdatum</string>
    <string name="geburtsdatumFormatStammdaten">Geburtsdatum TT.MM.JJJJ</string>
    <string name="beziehungAnsprechpartnerHint">Beziehung</string>
    <string name="blutgruppeStammdaten">Blutgruppe</string>
    <string name="rhesusfaktorStammdaten">Rhesusfaktor</string>
    <string name="vorerkrankungenStammdaten">Vorerkrankungen</string>
    <string name="speichernEingabe">Speichern</string>
    <string name="updateAnsprechpartner">Ändern</string>
    <string name="löschenDerStammdaten">Löschen</string>
    <string name="deleteAnsprechpartner">Löschen</string>
    <string name="viewAnsprechpartner">Ansprechpartner ansehen</string>
    <string name="addAnsprechpartner">Hinzufügen</string>
    <string name="beziehungAnsprechpartner">Beziehung</string>
    <string name="idAnsprechpartner">ID des Ansprechpartners</string>
    <string name="idAnsprechpartnerHint">ID des Ansprechpartners</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings fuer Emergency-->
    <string name="Bike">Motorrad / Fahrrad </string>
</resources>